v1.9.5 Beta:
------------
- Game Center added
- Sandwich Menu that a lot of android users will make happy
- Now there is a cheat menu made mobile devices that can not use keyboard shortcuts
- Updated Readme

v1.9.2 Beta:
------------
- Graphical bug fixes
- Improved physics, especially collision detection
- More and improved sounds effects, especial when keen on the map is 
using the swim suit

v1.9 Beta:
----------
- Integrated RefKeen to CG so Keen Dreams runs as the last planned game. It's fully playable now
- Minor fixes

v1.8.2.1 Release:
-----------------
- Message Box is shown in Keen 5 when fuses are broken
- Soft collision detection, so Sprites can go through narrow sections in the games (Keen 5 for example has some levels with that issue)
- Save name issues solved

v1.8.2 Release:
---------------
- Lots of bug fixes
- Vgamepad improved
- Improved SDL 2 support with proper combination of OpenGL

v1.8.0 Release:
---------------
- Dosbox fusion
- A lot of dosbox fixes
- Better mouse controls

v1.7.3 Release:
---------------
- New submenu for mods
- More fixes and AI improvements

v1.7.2 Release:
---------------
- A lot of fixes

v1.7.2 Beta:
------------
- More native resolutions if higher modes are used, especially in the launcher
- Some improved physics
- general bugs fixes as usual
- Shorter game names

v1.7.1 Alpha:
-------------
- Last window size is now saved automatically.
- Heavy engine independent code cleanups which will make CG more flexible for new game engines besides Commander Keen
- New GsLib will take more work at low level functions and will as wrapper for SDL and GUI elements
- Multiple selection problem should be fixed now.
- Even more smooth effects readded
- More bug fixes
- New pump event concept will solve a lot of deadlocks we previously had on the android versions.

v1.6.5.5 Release:
-----------------
- Added Scrollbar for a bigger list of games
- Wormmoutch bites again!

v1.6.5.3 Beta:
--------------
- More effects readded