@@ -593,7 +593,13 @@ void CPlayer::JumpAndPogo()
 void CPlayer::boostInertia(const int amt)
 {
 	CPhysicsSettings &PhysicsSettings = gpBehaviorEngine->getPhysicsSettings();
-	const int pinitspeed = PhysicsSettings.player.max_x_speed/2;
+
+    int pinitspeed = PhysicsSettings.player.max_x_speed/2;
+
+    if(playcontrol[PA_RUN])
+    {
+        pinitspeed = pinitspeed*2;
+    }
 
 	if (playcontrol[PA_X] < 0)
 	{
