@@ -1,3 +1,8 @@
+????:
+-----
+- Keen learns to run in the galaxy engine
+- Bug fixes in Dreams and much better timer
+
 v1.9.5 Beta:
 ------------
 - Game Center added
